tests/paczka1/fuzzy1/64154946.err
Error in line 5: rQHsbUNMps8 A378 24,3
Error in line 15: 2wS5 A378 53,6
Error in line 22: AxR S918 148,26
Error in line 21: AxR S918 30,9
Error in line 20: QPsW5 S918 13,8
Error in line 30: QPsW5 S397 67,9
Error in line 34: QPsW5 S918 47,9
Error in line 35: QPsW5 S887 97,8
